# ola-kiszka-help

./: BazaOsob.txt  CMakeLists.txt  CenyAkcjiX.txt  SlownikScrabble.txt  kol1_zad1.cpp  kol1_zad2.cpp  kol1_zad3.cpp  kol2_zad1.cpp  kol2_zad2.cpp  kol2_zad3.cpp  kol2_zad4.cpp  kol3_zad1.cpp  kol3_zad2.cpp  kol3_zad3.cpp  kol3_zad4.cpp  kol4_zad1.cpp  kol4_zad2.cpp  kol4_zad3.cpp  kol5_zad1.cpp  kol5_zad2.cpp  kol5_zad3.cpp  kol6_zad1.cpp  kol6_zad2.cpp  kol6_zad3.cpp  kol7_zad1.cpp  kol7_zad2.cpp  kol7_zad3.cpp  slownik.txt  zad1.cpp  zad2.cpp  zad3.cpp
