cmake_minimum_required(VERSION 3.9)
project(ola_kiszka_help)

set(CMAKE_CXX_STANDARD 11)

add_executable(kol1_zad1
        kol1_zad1.cpp)

add_executable(kol1_zad2
        kol1_zad2.cpp)

add_executable(kol1_zad3
        kol1_zad3.cpp)




add_executable(kol2_zad1
        BazaOsob.txt
        kol2_zad1.cpp)

add_executable(kol2_zad2
        kol2_zad2.cpp)

add_executable(kol2_zad3
        kol2_zad3.cpp)

add_executable(kol2_zad4
        kol2_zad4.cpp)
