cmake_minimum_required(VERSION 3.9)
project(ola_kiszka_help)

set(CMAKE_CXX_STANDARD 11)

add_executable(kol1_zad1
        kol1_zad1.cpp)

add_executable(kol1_zad2
        kol1_zad2.cpp)

add_executable(kol1_zad3
        kol1_zad3.cpp)




add_executable(kol2_zad1
        BazaOsob.txt
        kol2_zad1.cpp)

add_executable(kol2_zad2
        kol2_zad2.cpp)

add_executable(kol2_zad3
        kol2_zad3.cpp)

add_executable(kol2_zad4
        kol2_zad4.cpp)



add_executable(kol3_zad1
        kol3_zad1.cpp)

add_executable(kol3_zad2
        kol3_zad2.cpp)

add_executable(kol3_zad3
        kol3_zad3.cpp)

add_executable(kol3_zad4
        kol3_zad4.cpp)




add_executable(kol4_zad1
        kol4_zad1.cpp)

add_executable(kol4_zad2
        kol4_zad2.cpp)

add_executable(kol4_zad3
        kol4_zad3.cpp)



add_executable(kol5_zad1
        kol5_zad1.cpp)

add_executable(kol5_zad2
        kol5_zad2.cpp)

add_executable(kol5_zad3
        kol5_zad3.cpp)




add_executable(kol6_zad1
        kol6_zad1.cpp)

add_executable(kol6_zad2
        kol6_zad2.cpp)

add_executable(kol6_zad3
        kol6_zad3.cpp)



add_executable(kol7_zad1
        kol7_zad1.cpp)

add_executable(kol7_zad2
        kol7_zad2.cpp)

add_executable(kol7_zad3
        kol7_zad3.cpp)
